Delete unused file, refactor controller to separate axios call in independent service, add redis config
