# src/routes/index.ts
@@ -1,7 +1,7 @@
 import express from "express";
 import PingController from "../controllers/ping";
 import MarvelController from "../controllers/marvel";
-import CharacterDataWrapper, { CharacterIds, CharacterReturn } from "../src/dto/models/marvel-character";
+import { CharacterIds, CharacterReturn } from "../dto/models/marvel-character";
 const status = require('http-status');
 
 const router = express.Router();
@@ -26,10 +26,10 @@ router.get("/marvel/characters/:id", async (req, res) => {
     res.status(status.OK).json(response);
 });
 
-router.get("/marvel/hash", async(_req, res) => {
-    const controller = new MarvelController();
-    const response = await controller.getHash();
-    return res.send(response);
-});
+// router.get("/marvel/hash", async(_req, res) => {
+//     const controller = new MarvelController();
+//     const response = await controller.getHash();
+//     return res.send(response);
+// });
 
 export default router;
